--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,5 +1,8 @@
 ---
 // Simple test page to verify Liquid Glass is working
+// HYBRID MODE: Static generation for test page (public)
+export const prerender = true;
+
 import MainLayout from '../components/layout/MainLayout.astro';
 ---
 
